Enhance MockitoAdapterTest with ShoppingServiceClient integration and update provider states
- Introduced ShoppingServiceClient to MockitoAdapterTest for improved testing of shopping list functionalities.
- Updated user profile ID from 1 to 123 for consistency across tests.
- Modified provider states in pact interactions to reflect the new shopping list preferences and error handling scenarios.
- Adjusted test cases to ensure proper handling of invalid shopping list IDs and updated expected responses accordingly.

These changes improve the robustness of the tests and align the interactions with the updated service contracts.