@@ -7,6 +7,8 @@ import io.github.ludorival.pactjvm.mock.spring.SpringRestTemplateMockkAdapter;
 import io.github.ludorival.pactjvm.mock.test.userservice.UserPreferences;
 import io.github.ludorival.pactjvm.mock.test.userservice.UserProfile;
 import io.github.ludorival.pactjvm.mock.test.consumer.userservice.UserServiceClient;
+import io.github.ludorival.pactjvm.mock.test.consumer.shoppingservice.ShoppingServiceClient;
+import io.github.ludorival.pactjvm.mock.test.shoppingservice.ShoppingList;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -15,6 +17,7 @@ import org.springframework.http.*;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.Map;
@@ -44,8 +47,10 @@ public class MockitoAdapterTest {
 
     private UserServiceClient userServiceClient;
 
+    private ShoppingServiceClient shoppingServiceClient;
+
     private static final UserProfile USER_PROFILE = new UserProfile(
-            1L,
+            123L,
             "John Doe",
             "john.doe@example.com",
             new UserPreferences(123L)
@@ -55,6 +60,7 @@ public class MockitoAdapterTest {
     void setup() {
         MockitoAnnotations.openMocks(this);
         userServiceClient = new UserServiceClient(restTemplate);
+        shoppingServiceClient = new ShoppingServiceClient(restTemplate);
     }
 
     @Test
@@ -77,7 +83,7 @@ public class MockitoAdapterTest {
                 eq(UserProfile.class),
                 any(Long.class)))
             .withDescription("Get user profile")
-            .withProviderState("User exists", Map.of("userId", "1"))
+            .withProviderState("The user has a preferred shopping list", Map.of("userId", USER_PROFILE.getId()))
             .thenReturn(ResponseEntity.ok(USER_PROFILE));
 
         UserProfile response = userServiceClient.getUserProfile(1L);
@@ -86,12 +92,13 @@ public class MockitoAdapterTest {
 
     @Test
     void testSetPreferredShoppingListError() {
-        String errorMessage = "Invalid shopping list preference";
-        PactMockito.uponReceiving(restTemplate.exchange(
-                any(RequestEntity.class),
-                eq(UserProfile.class)))
-            .withDescription("Update user preferences with invalid shopping list")
-            .withProviderState("Invalid shopping list", Map.of("userId", "1", "shoppingListId", "456"))
+        String errorMessage = "The shopping list ID is invalid or does not exist";
+        PactMockito.uponReceiving(restTemplate.postForEntity(
+                any(URI.class),
+                any(Map.class),
+                eq(ShoppingList.class)))
+            .withDescription("should return a 400 Bad request")
+            .withProviderState("The request should return a 400 Bad request", Collections.emptyMap())
             .thenThrow(HttpClientErrorException.BadRequest.create(
                     HttpStatus.BAD_REQUEST,
                     errorMessage,
@@ -101,7 +108,10 @@ public class MockitoAdapterTest {
             ));
 
         HttpClientErrorException exception = assertThrows(HttpClientErrorException.class, () -> {
-            userServiceClient.setPreferredShoppingList(1L, 456L);
+            shoppingServiceClient.createShoppingList(
+                    USER_PROFILE.getId(),
+                    "Unexpected character \\s"
+                );
         });
         assertEquals(HttpStatus.BAD_REQUEST, exception.getStatusCode());
         assertEquals(errorMessage, exception.getResponseBodyAsString());
